<resources>
    <string name="action_settings">Settings</string>
    <string name="action_diagnostics">Diagnostics</string>
    <string name="action_messages">Messages</string>
    <string name="action_organisations">Organisations</string>
    <string name="action_connect">Connect</string>
    <string name="action_about">About</string>
    <string name="action_add_update">Add Update</string>
    <string name="action_delete_update">Delete Update</string>
    <string name="action_attach_photo">Attach Photo</string>
    <string name="action_logout">Log out</string>
    <string name="action_sendall">Send all unsent</string>
    <string name="app_name">Akvo RSR Up</string>
    <string name="app_subtitle">Really Simple Reporting</string>
    <string name="app_version">&#160;Version&#160;</string>
    <string name="authtitle">Authorization required</string>
    <string name="authtext">Please input the admin password</string>
    <string name="authfailed">Authorization failed</string>
    <string name="copyright">Copyright &#169; 2012-2016 Stichting Akvo</string>
    <string name="powered_by_akvo">Powered by Akvo</string>
    <string name="title_activity_login">Akvo RSR Up</string>
    <string name="title_activity_project_list">RSR Up</string>
    <string name="title_activity_project_detail">RSR Up</string>
    <string name="title_activity_update_list">RSR Up</string>
    <string name="title_activity_update_edit">RSR Up</string>
    <string name="title_activity_result_editor">RSR Up</string>
    <string name="title_activity_result_list">RSR Up</string>
    <string name="title_activity_period_detail">RSR Up</string>
    <string name="title_activity_employment_application">RSR Up</string>
    <string name="title_activity_update_detail">RSR Up</string>
    <string name="title_activity_settings">RSR Up Settings</string>
    <string name="title_activity_diagnostics">RSR Up Diagnostics</string>
    <string name="title_activity_about">RSR Up About</string>
    <string name="title_activity_license">RSR Up License information</string>
    <string name="title_activity_messages">RSR Up Messages</string>
    <string name="license">License information</string>
    <string name="label_update_title">Add a project update:</string>
    <string name="hint_update_title">Title</string>
    <string name="hint_search">Search</string>
    <string name="label_update_description">Update Description:</string>
    <string name="label_send_progress">Publishing update</string>
    <string name="label_project_location">Location:</string>
    <string name="label_project_summary">Summary:</string>
    <string name="hint_update_description">Description</string>
    <string name="hint_update_caption">Photo caption</string>
    <string name="hint_update_credit">Photo credit</string>
    <string name="hint_optional">(Optional)</string>
    <string name="label_photo_credit">Photo: %s</string>
    <string name="label_empty_proj_list">Nothing to show with this filter.</string>
    <string name="label_first_proj_list">Nothing fetched yet. Use the refresh button to see your projects.\n\nIf you have a low-bandwidth connection you should turn on delayed picture fetching in settings first.</string>
    <string name="label_unemployed_proj_list">You are not connected to any projects.\n\nSelect Connect in the menu to send an application.</string>
    <string name="label_proj_list">Your Projects:</string>
    <string name="label_org_list">Organisations:</string>
    <string name="label_update_list">Updates:</string>
    <string name="label_result_list">Results, Indicators:</string>
    <string name="label_refresh_progress">Refresh progress</string>
    <string name="label_progress_projects">Projects</string>
    <string name="label_progress_updates">Updates</string>
    <string name="label_progress_pictures">Pictures</string>
    <string name="label_progress_orgs">Organisations</string>
    <string name="label_progress_countries">Countries</string>
    <string name="label_clearcache_freespace">Frees %d MB. Pictures by you are kept.</string>
    <string name="label_settings_general">General</string>
    <string name="label_settings_testing">Testing</string>
    <string name="label_setting_delaypics">Delay fetching pictures</string>
    <string name="label_setting_fullsynch">Full refresh</string>
    <string name="label_setting_clearcache">Delete cached pictures</string>
    <string name="label_setting_host">Data server</string>
    <string name="label_setting_feedback">Give feedback</string>
    <string name="label_setting_feedback_version">Give feedback on ver %s</string>
    <string name="label_setting_debuginfo">Debug</string>
    <string name="label_setting_removeloc">Remove photo location</string>
    <string name="label_connect_title">Connect with:</string>
    <string name="label_connections_title">Your connections:</string>
    <string name="label_connect_instructions">Type all or part of the name. If you cannot find your organisation in the list, use refresh.</string>
    <string name="label_country">Country</string>
    <string name="label_job_title">Job title</string>
    <string name="label_add_perioddata">Add data for period:</string>
    <string name="label_relative_data">Relative data</string>
    <string name="hint_data">Data</string>
    <string name="hint_text">Text</string>
    <string name="summary_setting_delaypics">Do not fetch pictures until they are clicked. Refresh is fast, but pictures are unavailable when offline.</string>
    <string name="summary_setting_fullsynch">Do full fetches that can detect deleted updates, but will take longer.</string>
    <string name="summary_setting_feedback">Open a web feedback form where you can tell us what you think of this app.</string>
    <string name="summary_setting_debuginfo">Show project and update ids and other debug info.</string>
    <string name="summary_setting_removeloc">Geolocation info in photo files will be removed before upload.</string>
    <string name="label_setting_messages">Show messages</string>
    <string name="summary_setting_messages">Display a list of errors and other messages.</string>
    <string name="state_draft">Draft</string>
    <string name="state_published">Published</string>
    <string name="state_synchronising">Synchronising</string>
    <string name="count_draft">&#160;Draft</string>
    <string name="count_published">&#160;Published</string>
    <string name="count_results">&#160;Results</string>
    <string name="count_indicators">&#160;Indicators</string>
    <string name="count_zero">No updates</string>
    <string name="count_unsynch">&#160;Unsynchronised</string>
    <string name="updates_txt">UPDATES STATUS</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="btncaption_ok">OK</string>
    <string name="btncaption_cancel">Cancel</string>
    <string name="btncaption_sign_in">SIGN IN</string>
    <string name="btncaption_apply">APPLY</string>
    <string name="btncaption_send_data">SEND DATA</string>
    <string name="btncaption_take_photo">Take photo</string>
    <string name="btncaption_attach_photo">Attach photo</string>
    <string name="btncaption_attach_file">Attach file</string>
    <string name="btncaption_rephoto">Replace photo</string>
    <string name="btncaption_dephoto">Delete photo</string>
    <string name="btncaption_rotphoto">Rotate photo</string>
    <string name="btncaption_add_update">Add update</string>
    <string name="btncaption_add_data">Add period data</string>
    <string name="btncaption_edit_update">Edit this update</string>
    <string name="btncaption_refresh">Refresh project list</string>
    <string name="btncaption_refresh_oneproj">Refresh project</string>
    <string name="btncaption_view_results">View results</string>
    <string name="btncaption_viewupdates">View all updates</string>
    <string name="btncaption_clear_data">Clear all data</string>
    <string name="btncaption_send_update">Send update</string>
    <string name="btncaption_save_draft">Save draft</string>
    <string name="btncaption_gps_position">Get GPS location</string>
    <string name="btncaption_gps_cancel">Cancel GPS location</string>
    <string name="btncaption_photo_position">Use photo location</string>
    <string name="btncaption_details">Details</string>
    <string name="host_dialog_title">Enter new data host name.</string>
    <string name="host_dialog_msg">All local data will be deleted.\nExample: rsr.akvo.org or https://rsr.akvotest.org</string>
    <string name="send_progress_title">Publishing</string>
    <string name="send_progress_msg">Sending update to server...</string>
    <string name="error_dialog_title">Error</string>
    <string name="nocard_dialog_title">No storage available</string>
    <string name="nocard_dialog_msg">Akvo RSR Up requires a mounted, writable storage card for image files. Mount card and restart app.</string>
    <string name="noid_dialog_title">No project/update id</string>
    <string name="noid_dialog_msg">Caller did not specify a project and update</string>
    <string name="noupd_dialog_title">Update missing</string>
    <string name="noupd_dialog_msg">Cannot find update for display</string>
    <string name="noupd2_dialog_msg">Cannot find update for edit</string>
    <string name="noproj_dialog_title">No project id</string>
    <string name="noproj_dialog_msg">Caller did not specify a project</string>
    <string name="norot_dialog_title">IO Error rotating photo file</string>
    <string name="norot_dialog_title2">Photo file too big to rotate</string>
    <string name="norot_dialog_msg">Try a lower resolution photo</string>
    <string name="warnbig_dialog_title">Photo file too big</string>
    <string name="warnbig_dialog_msg1">Set your camera to a lower resolution</string>
    <string name="warnbig_dialog_msg2">Pick a smaller photo</string>
    <string name="shrinkbig_dialog_title">Could not shrink photo</string>
    <string name="shrinkbig_dialog_msg">Original was too big to process</string>
    <string name="nonet_dialog_title">No network available</string>
    <string name="nonet_dialog_msg">You must be connected to the internet</string>
    <string name="login_progress_title">Signing in</string>
    <string name="login_progress_msg">Sending login information</string>
    <string name="cleared_dialog_title">Cache cleared</string>
    <string name="cleared_dialog_msg">%1$d files deleted (%2$d MB)</string>
    <string name="detail_dialog_title">Error details</string>
    <string name="gpsdisabled_dialog_msg">GPS must be enabled to do this. Select OK to go to the settings page. Select Use GPS Satellites and then press the back button to return. Once GPS is enabled you can click Check Geo Location again to get your position.</string>
    <string name="label_gps_searching">Searching</string>
    <string name="label_gps_ready">Ready</string>
    <string name="label_accuracy">Accuracy:</string>
    <string name="label_latitude">Latitude:</string>
    <string name="label_longitude">Longitude:</string>
    <string name="label_elevation">Elevation:</string>
    <string name="msg_update_published">Update published</string>
    <string name="msg_emp_applied">Your request is now pending and will have to be approved.</string>
    <string name="msg_period_data_submitted">Update published</string>
    <string name="msg_send_success">Successfully sent to server</string>
    <string name="msg_update_success">Update successfully sent to server</string>
    <string name="msg_update_interrupted">Network connection was lost while sending update</string>
    <string name="msg_update_duplicated">Update somehow duplicated on server. Please tell the developers!</string>
    <string name="dummy_project_title">Project title here</string>
    <string name="dummy_count">17</string>
</resources>