<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:title="@string/title_activity_settings"
    >

    <PreferenceCategory
        android:title="@string/label_settings_general">

        <CheckBoxPreference
            android:key="setting_delay_image_fetch"
            android:title="@string/label_setting_delaypics"
            android:summary="@string/summary_setting_delaypics"
            android:defaultValue="false"
            />
        <Preference
            android:key="clear_cache"
            android:title="@string/label_setting_clearcache"
            />    
        <Preference
            android:key="data_host"
            android:title="@string/label_setting_host"
            />    
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/label_settings_testing">
      
    	<Preference
            android:key="feedback_form"
            android:title="@string/label_setting_feedback"
            android:summary="@string/summary_setting_feedback">
            <intent
        	    android:action="android.intent.action.VIEW"
        	    android:data="https://akvodev.webform.com/form/10072" />
    	</Preference>
        <CheckBoxPreference
            android:key="setting_debug"
            android:title="@string/label_setting_debuginfo"
            android:summary="@string/summary_setting_debuginfo"
            android:defaultValue="false"
            />
	</PreferenceCategory>
  
  
<!--       
  <PreferenceCategory
     android:title="Selection">
    <ListPreference
        android:key="pref_type"
        android:title="Type"
        android:summary="Select item from array"
        android:entries="@array/types"
        android:entryValues="@array/types_values"
        android:defaultValue="1"
        />

    <EditTextPreference
        android:key="pref_text"
        android:title="Input text"
        android:summary="Tap to enter some text"
        android:dialogTitle="Enter text"
    />
     
  </PreferenceCategory>
 -->
   
</PreferenceScreen>
