<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true" xmlns:tools="http://schemas.android.com/tools" tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:background="@color/rsr_purple"
		>
 
		<!--  Header Starts-->
		<LinearLayout android:id="@+id/header"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="5dip"
		    android:paddingBottom="5dip"
		    android:orientation="vertical" >
	        <!-- Logo Start-->
	        <ImageView android:src="@drawable/logo"
	            android:contentDescription="@string/app_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            />
	        <!-- Logo Ends -->

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:paddingTop="5dip"
	            android:text="@string/app_subtitle"
	            android:textColor="@android:color/white"
	            android:textSize="20sp"
	            android:typeface="sans" />

		</LinearLayout>
		<!--  Header Ends -->
 
		<!-- Login Form -->
        <LinearLayout
          android:orientation="vertical"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          android:layout_below="@id/header">
          <EditText android:id="@+id/edit_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:singleLine="true"
                android:hint="@string/username" android:padding="5dip"/>
          <EditText android:id="@+id/edit_password"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:hint="@string/password"
                android:inputType="textPassword" android:padding="5dip"/>
          <!-- Login button -->
          <Button android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btncaption_sign_in"
                android:background="@color/rsr_blue"
                android:textColor="@color/rsr_purple"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="30dip"
                android:paddingRight="30dip"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                />
          
          <!-- Link to Registration Screen -->

          <TextView
              android:id="@+id/link_to_forgot"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="30dip"
              android:gravity="center"
              android:text="@string/forgot_password_"
              android:textColor="@color/rsr_blue"
              android:textSize="20sp" />
 
          <LinearLayout
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="10dip"
              >
              
              <!-- Settings -->

              <TextView
                  android:id="@+id/link_to_settings"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="10dp"
                  android:layout_marginTop="10dp"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:text="@string/action_settings"
                  android:textColor="@color/rsr_blue"
                  android:textSize="20sp"
                  android:textStyle="italic" />
    	 
              <!-- About -->

              <TextView
                  android:id="@+id/link_to_about"
                  android:layout_width="0dip"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="10dp"
                  android:layout_marginTop="10dp"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:text="@string/action_about"
                  android:textColor="@color/rsr_blue"
                  android:textSize="20sp"
                  android:textStyle="italic" />
    	 
              	</LinearLayout>
       </LinearLayout>
       <!-- Login Form Ends --> 
  </RelativeLayout>
</ScrollView>
