<!-- One project list item  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
 	android:padding="5dip"
 	>

    <ImageView
        android:id="@+id/list_item_thumbnail"
        android:layout_width="100dip"
        android:layout_height="80dip"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        />
       
	<LinearLayout
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
	    android:orientation="vertical"
		>

       	<TextView
	        android:id="@+id/list_item_title"
       	    android:layout_width="fill_parent"
       	    android:layout_height="wrap_content"
       	    android:gravity="fill_horizontal"
       	    android:paddingBottom="5dip"
       	    android:textColor="@color/rsr_purple"
       	    android:typeface="sans" />

       	<TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/updates_txt"
	        android:textSize="12sp"
	        android:textColor="@color/dk_gray"
	        android:typeface="sans"/>

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >

        	<TextView
	        	android:id="@+id/list_item_published_count"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="left"
        	    android:paddingRight="5dp"
        	    android:text="@string/count_published"
        	    android:textSize="12sp"
        	    android:textColor="@color/blue"
        	    android:typeface="sans"
        	    />

        	<!-- TextView
	     		android:id="@+id/list_item_unsynchronized_count"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="left"
        	    android:paddingRight="5dp"
        	    android:text="@string/count_unsynch"
        	    android:textColor="@color/red"
        	    android:textSize="12sp"
        	    android:typeface="sans"
        	    /-->

        	<TextView
	        	android:id="@+id/list_item_draft_count"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:text="@string/count_draft"
		        android:textSize="12sp"
		        android:textColor="@color/red"
		        android:typeface="sans"
		        />
    	</LinearLayout>
   	</LinearLayout>
</LinearLayout>
