<LinearLayout
	  	xmlns:android="http://schemas.android.com/apk/res/android"
  		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
	    android:orientation="vertical"
		>

		<!-- Project title -->
    	<TextView
	        android:id="@+id/rlisttitlelabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
	        android:text="@string/dummy_project_title"
            android:textColor="@color/rsr_purple"
	 	    android:background="@color/pale_gray"
            android:textSize="20sp"
            android:padding="5dip"
            android:typeface="sans" />

  
		<!-- List label and count -->
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:background="@drawable/box"
	        >

	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
		        android:layout_weight="1"
	            android:padding="5dip"
	            android:text="@string/label_result_list"
	            android:typeface="sans"
	            />

	        <TextView
		        android:id="@+id/resultcountlabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:layout_gravity="right"
		        android:layout_weight="0"
	            android:padding="5dip"
	            android:text="@string/dummy_count"
		        android:typeface="sans"
		        />
		</LinearLayout>
		
		<!-- List fills rest of view -->
        <ListView android:id="@+id/list_results"
             android:layout_width="fill_parent"
             android:layout_height="0dip"
             android:background="@android:color/white"
             android:layout_weight="1"
             android:drawSelectorOnTop="false"/>	    					    		    
	
</LinearLayout>
	
	